# vtt-rs

./: .gitignore  Cargo.toml  LICENSE  README.md  vtt.config.json
.github/workflows/: ci.yml  docs.yml  publish.yml
examples/: ai_agent.rs  streaming_agent.rs
src/: audio.rs  config.rs  lib.rs  main.rs  transcription.rs
src/whisper-microphone/: mod.rs  multilingual.rs
