[package]
name = "vtt-rs"
version = "0.1.0"
edition = "2024"
license = "MIT"
authors = ["Geoff Seemueller"]
description = "Command-line utility that streams microphone input to OpenAI compatible transcription APIs"
repository = "https://github.com/geoffsee/vtt-rs"
readme = "README.md"
keywords = ["transcription", "openai", "whisper", "audio", "cli"]
categories = ["command-line-utilities", "multimedia::audio"]

[dependencies]
anyhow = "1.0"
cpal = "0.16"
hound = "3.4"
reqwest = { version = "0.11", features = ["json", "multipart", "rustls-tls"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal", "fs"] }

[dev-dependencies]
tempfile = "3"
